--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^11.1.6",
-    "@seolhun/eslint-config": "^1.3.2",
+    "@seolhun/eslint-config": "1.3.2",
     "@storybook/addon-actions": "^7.6.10",
     "@storybook/addon-controls": "^7.6.10",
     "@storybook/addon-links": "^7.6.10",
@@ -89,7 +89,7 @@
     "css-minimizer-webpack-plugin": "^4.2.2",
     "csstype": "^3.1.0",
     "eslint-plugin-eslint-plugin": "^5.0.8",
-    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-prettier": "^5.1.3",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^28.1.3",
     "jest-environment-jsdom": "^29.3.1",
@@ -100,7 +100,7 @@
     "postcss-import": "^15.1.0",
     "postcss-loader": "^7.0.1",
     "postcss-preset-env": "7.7.2",
-    "prettier": "^2.8.1",
+    "prettier": "^3.3.1",
     "react-popper": "^2.3.0",
     "rimraf": "^3.0.2",
     "rollup": "^4.9.5",
