--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "license": "MIT",
   "name": "@seolhun/root-ui",
-  "version": "0.8.2",
+  "version": "0.8.3-alpha.0",
   "types": "dist/legacy/index.d.ts",
   "main": "dist/legacy/index.cjs",
   "module": "dist/legacy/index.js",
@@ -69,7 +69,8 @@
     "@heroicons/react": "^2.1.1",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "clsx": "^1.2.1",
-    "color": "^4.2.3"
+    "color": "^4.2.3",
+    "lodash-es": "^4.17.21"
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
@@ -94,6 +95,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/react-hooks": "^7.0.2",
     "@types/jest": "^27.0.1",
+    "@types/lodash-es": "^4.17.12",
     "@types/react": "^18.0.25",
     "@typescript-eslint/eslint-plugin": "^5.59.2",
     "autoprefixer": "^10.4.8",
