--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "type:check": "tsc --noEmit --project tsconfig.build.json",
     "prebuild": "rimraf dist/*",
     "build": "rollup -c --bundleConfigAsCjs",
-    "test": "jest --coverage",
+    "test": "vitest run",
     "lint": "eslint --ext .js,.ts,.tsx,.jsx ./",
     "lint:fix": "eslint --ext .js,.ts,.tsx,.jsx ./ --fix",
     "prettier": "prettier --write '**/*.{ts,tsx,js,jsx}'",
@@ -80,15 +80,13 @@
     "@storybook/manager-api": "^8.1.6",
     "@storybook/react": "^8.1.6",
     "@storybook/react-webpack5": "^8.1.6",
-    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/jest-dom": "^6.4.6",
     "@testing-library/react": "^13.4.0",
     "@testing-library/react-hooks": "^7.0.2",
-    "@types/jest": "^27.0.1",
     "@types/lodash-es": "^4.17.12",
     "@types/react": "^18.0.25",
     "@typescript-eslint/eslint-plugin": "^5.59.2",
     "autoprefixer": "^10.4.8",
-    "babel-jest": "^29.3.1",
     "babel-loader": "^8.2.5",
     "core-js": "^3.26.1",
     "css-loader": "^7.1.2",
@@ -97,8 +95,7 @@
     "eslint-plugin-eslint-plugin": "^5.0.8",
     "eslint-plugin-prettier": "^5.1.3",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.3.1",
+    "jsdom": "^24.1.0",
     "mini-css-extract-plugin": "^2.7.2",
     "node-sass": "^8.0.0",
     "postcss": "^8.4.33",
@@ -121,6 +118,7 @@
     "ts-essentials": "^9.2.0",
     "typescript": "5.3.3",
     "typescript-transform-paths": "^3.4.6",
+    "vitest": "^1.6.0",
     "webpack": "^5.76.2"
   }
 }
