--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
   "dependencies": {
     "@floating-ui/react": "^0.26.16",
     "@fxts/core": "^1.0.0",
-    "@headlessui/react": "^2.0.4",
+    "@headlessui/react": "^1",
     "@heroicons/react": "^2.1.3",
     "clsx": "^1.2.1",
     "color": "^4.2.3",
@@ -115,6 +115,7 @@
     "storybook": "^8.1.6",
     "style-loader": "^3.3.1",
     "ts-essentials": "^9.2.0",
+    "tslib": "^2.6.3",
     "typescript": "5.3.3",
     "typescript-transform-paths": "^3.4.6",
     "vitest": "^1.6.0",
