--- a/packages/tailwind-config/package.json
+++ b/packages/tailwind-config/package.json
@@ -48,6 +48,7 @@
     "tailwindcss": ">=3.0.0"
   },
   "dependencies": {
+    "@fxts/core": "^1.0.0",
     "color": "^4.2.3",
     "lodash-es": "^4.17.21"
   }
