--- a/packages/tailwind-config/package.json
+++ b/packages/tailwind-config/package.json
@@ -5,7 +5,7 @@
     "email": "shun10116@gmail.com",
     "url": "https://github.com/Seolhun"
   },
-  "name": "@seolhun/root-tailwind-config",
+  "name": "@seolhun/root-ui-tailwind",
   "description": "Root Tailwind Config",
   "version": "0.8.3",
   "publishConfig": {
@@ -41,6 +41,7 @@
     "lint": "eslint --ext .js,.jsx,.ts,.tsx ./src",
     "lint:fix": "eslint --ext .js,.jsx,.ts,.tsx ./src --fix",
     "build": "tsup",
+    "watch": "tsup --watch",
     "clear": "rm -rf dist",
     "test": "vitest --run"
   },
