--- a/package.json
+++ b/package.json
@@ -47,12 +47,6 @@
     "@babel/preset-typescript": "^7.18.6",
     "@changesets/cli": "^2.27.5",
     "@chromatic-com/storybook": "^1",
-    "@rollup/plugin-babel": "^6.0.4",
-    "@rollup/plugin-commonjs": "^25.0.7",
-    "@rollup/plugin-json": "^6.1.0",
-    "@rollup/plugin-node-resolve": "^15.2.3",
-    "@rollup/plugin-terser": "^0.4.4",
-    "@rollup/plugin-typescript": "^11.1.6",
     "@seolhun/eslint-config": "1.3.2",
     "@seolhun/root-eslint": "workspace:*",
     "@seolhun/root-tsconfig": "workspace:*",
@@ -78,6 +72,7 @@
     "css-loader": "^7.1.2",
     "css-minimizer-webpack-plugin": "^4.2.2",
     "csstype": "^3.1.0",
+    "esbuild-plugin-sass": "^1.0.1",
     "esbuild-plugin-svgr": "^2.1.0",
     "eslint-plugin-eslint-plugin": "^5.0.8",
     "eslint-plugin-prettier": "^5.1.3",
@@ -93,11 +88,6 @@
     "prettier": "^3.3.1",
     "react-popper": "^2.3.0",
     "rimraf": "^5.0.7",
-    "rollup": "^4.9.5",
-    "rollup-plugin-bundle-size": "^1.0.3",
-    "rollup-plugin-postcss": "^4.0.2",
-    "rollup-plugin-scss": "^4.0.0",
-    "rollup-plugin-visualizer": "^5.12.0",
     "sass": "^1.77.5",
     "sass-loader": "^14.2.1",
     "storybook": "^8.1.6",
