--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -25,7 +25,7 @@
   "scripts": {
     "type:check": "tsc --noEmit --project tsconfig.build.json",
     "prebuild": "rimraf dist/*",
-    "build": "rollup -c --bundleConfigAsCjs",
+    "build": "tsup",
     "test": "vitest run",
     "prettier": "prettier --write './src/**/*.{ts,tsx,js,jsx}'",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx ./src",
