--- a/package.json
+++ b/package.json
@@ -50,16 +50,15 @@
     "@seolhun/eslint-config": "1.3.2",
     "@seolhun/root-eslint": "workspace:*",
     "@seolhun/root-tsconfig": "workspace:*",
-    "@storybook/addon-actions": "^8.1.6",
-    "@storybook/addon-controls": "^8.1.6",
-    "@storybook/addon-links": "^8.1.6",
-    "@storybook/addon-mdx-gfm": "^8.1.6",
-    "@storybook/addon-viewport": "^8.1.6",
+    "@storybook/addon-actions": "^8.1.5",
+    "@storybook/addon-docs": "^8.1.5",
+    "@storybook/addon-essentials": "^8.1.5",
+    "@storybook/addon-links": "^8.1.5",
     "@storybook/addon-webpack5-compiler-babel": "^3.0.3",
-    "@storybook/cli": "^8.1.6",
-    "@storybook/manager-api": "^8.1.6",
-    "@storybook/react": "^8.1.6",
-    "@storybook/react-webpack5": "^8.1.6",
+    "@storybook/mdx2-csf": "^0.0.3",
+    "@storybook/react": "^8.1.5",
+    "@storybook/react-webpack5": "^8.1.5",
+    "@svgr/webpack": "^8.1.0",
     "@testing-library/jest-dom": "^6.4.6",
     "@testing-library/react": "^13.4.0",
     "@testing-library/react-hooks": "^7.0.2",
@@ -97,7 +96,10 @@
     "tsup": "^8.1.0",
     "turbo": "^2.0.3",
     "typescript": "5.3.3",
-    "vitest": "^1.6.0"
+    "vitest": "^1.6.0",
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-merge": "^5.10.0"
   },
   "packageManager": "pnpm@9.2.0"
 }
