--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@babel/preset-env": "^7.15.0",
     "@babel/preset-react": "^7.13.13",
     "@babel/preset-typescript": "^7.18.6",
+    "@changesets/changelog-github": "^0.4.8",
     "@changesets/cli": "^2.27.5",
     "@chromatic-com/storybook": "^1",
     "@seolhun/eslint-config": "1.3.2",
