--- a/.github/workflows/storybook-deployment.yml
+++ b/.github/workflows/storybook-deployment.yml
@@ -1,11 +1,10 @@
 name: Storybook Build & Deployment at Github Page
 
 on:
-  workflow_dispatch:
-    inputs:
-      commit_sha:
-        description: 'commit sha for deployment'
-        type: string
+  push:
+    branches: [main]
+    paths-ignore:
+      - '**/*.md'
 
 jobs:
   storybook-ci-cd:
