--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -6,17 +6,10 @@ on:
     paths-ignore:
       - '**/*.md'
   pull_request:
-    branches:
-      [
-        /^release/.*$/,
-        /^feature/.*$/,
-        /^bugfix/.*$/,
-        /^hotfix/.*$/,
-        /^support/.*$/,
-      ]
+    branches: [main, develop, /^release\/.*$/, /^feature\/.*$/, /^bugfix\/.*$/, /^hotfix\/.*$/, /^support\/.*$/]
     types: [opened, synchronize, reopened]
     paths-ignore:
-      - "**/*.md"
+      - '**/*.md'
 
 jobs:
   ci:
