--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -21,13 +21,13 @@
     "tailwind.config.js"
   ],
   "types": "dist/legacy/index.d.ts",
-  "main": "dist/legacy/index.cjs",
-  "module": "dist/legacy/index.js",
+  "main": "dist/legacy/index.js",
+  "module": "dist/legacy/index.mjs",
   "exports": {
     ".": {
       "import": {
-        "types": "./dist/modern/index.d.ts",
-        "default": "./dist/modern/index.js"
+        "types": "./dist/modern/index.d.mts",
+        "default": "./dist/modern/index.mjs"
       },
       "require": {
         "types": "./dist/modern/index.d.ts",
