--- a/packages/tailwind-config/package.json
+++ b/packages/tailwind-config/package.json
@@ -19,21 +19,22 @@
     "README.md",
     "package.json"
   ],
-  "type": "module",
   "types": "dist/legacy/index.d.ts",
-  "main": "dist/legacy/index.cjs",
-  "module": "dist/legacy/index.js",
+  "main": "dist/legacy/index.js",
+  "module": "dist/legacy/index.mjs",
   "exports": {
     ".": {
       "import": {
-        "types": "./dist/modern/index.d.ts",
-        "default": "./dist/modern/index.js"
+        "types": "./dist/modern/index.d.mts",
+        "default": "./dist/modern/index.mjs"
       },
       "require": {
-        "types": "./dist/modern/index.d.cts",
-        "default": "./dist/modern/index.cjs"
+        "types": "./dist/modern/index.d.ts",
+        "default": "./dist/modern/index.js"
       }
     },
+    "./modern/index.css": "./dist/modern/index.css",
+    "./legacy/index.css": "./dist/legacy/index.css",
     "./package.json": "./package.json"
   },
   "scripts": {
