--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -7,7 +7,7 @@
   },
   "name": "@seolhun/root-ui",
   "description": "root-ui is a design system for React and tailwindcss.",
-  "version": "0.8.8",
+  "version": "0.8.9-alpha.0",
   "publishConfig": {
     "access": "public",
     "registry": "https://registry.npmjs.org"
