--- a/.github/workflows/storybook-deployment.yml
+++ b/.github/workflows/storybook-deployment.yml
@@ -11,6 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       GITHUB_TOKEN: ${{secrets.GH_TOKEN}}
+      PUBLIC_NPM_TOKEN: ${{secrets.PUBLIC_NPM_TOKEN}}
 
     steps:
       - name: Checkout
