--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -7,7 +7,7 @@
   },
   "name": "@seolhun/root-ui",
   "description": "root-ui is a design system for React and tailwindcss.",
-  "version": "0.8.9",
+  "version": "0.8.10-alpha.0",
   "publishConfig": {
     "access": "public"
   },
